fixed overflow issue

--- a/Frontend/Food_Delivery/src/components/Header/Header.css
+++ b/Frontend/Food_Delivery/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header{
     height: 30vw;
     margin: 30px auto;
-    background: url('/header_img.png') no-repeat;
+    background: url('/header_img.png') no-repeat center center;
     background-size: contain;
     position: relative;
 }
