--- a/Frontend/Food_Delivery/src/index.css
+++ b/Frontend/Food_Delivery/src/index.css
@@ -1,5 +1,15 @@
 
+
+#root {
+  max-width: none !important;
+  width: 100% !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 
 *{
   padding:0;
@@ -30,4 +40,9 @@ a{
   100% {
     opacity: 1;
   }
+}
+
+html, body {
+  width: 100%;
+  overflow-x: hidden;
 }
